----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-06-30 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french: update

2003-06-30 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_properties_operations.php3, lang/*: Reorganised layout a bit, added
      CHECK link for InnoDB, use correct table type name fo BerkeleyDB.
    * tbl_query_box.php3: Moved load text files link outside form.

2003-06-27 Garvin Hicking <dont_sobic.c_me_please@supergarv.de>
    * left.php3: Removed debugging code

2003-06-27 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/display_tbl.lib.php3, libraries/relation.lib.php3: Added some
      checks to avoid trying to use relations when no table (bug #761835).
    
2003-06-27 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php3: bug 760648: incorrect result count on MySQL 3

2003-06-26 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/ukrainian: update, thanks to Markijan Baran
    * libraries/sqlparser.lib.php3 typo

2003-06-26 Michal Cihar  <nijel@users.sourceforge.net>
    * sql.php3, tbl_properties_links.php3, tbl_properties_structure.php3: Go
      back to tbl_properties_structure.php3 when not dropping table.

2003-06-25 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/create-release.sh: typo, bzip should be bzip2
    * libraries/sqlparser.lib.php3, tbl_properties_export.php3:
      bug 760648 export SELECT DISTINCT results

2003-06-25 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/sqlparser.lib.php3: Fixed XSS problem.
    * tbl_properties.inc.php3, libraries/functions.js: Alert user when not
      specied length for CHAR/VARCHAR fields.
    * libraries/export/{csv,latex,xml}.php3: Use correct field names when
      exporting custom SQL (also saves one SQL query for export) (fixes bug
      #755386).
    * lang/italian: Updated, thanks to Pietro Danesi (danone).
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).