@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-07-01 Marc Delisle  <lem9@users.sourceforge.net>
+    * Documentation.html: faq 8.1 about security alert of 2003-06-18
+
 2003-06-30 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/french: update
 
